# yas-snap

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DESIGN.md  EULA.md  Makefile  README.md
assets/: featured.json
qml/: Main.qml
qml/core/: Theme.qml  YasAppWindow.qml
qml/core/components/: AccentButton.qml  DetailPane.qml  FeaturedView.qml  IconButton.qml  PackageBrowser.qml  PackageDelegate.qml  SearchBar.qml  SummaryCard.qml  TagBadge.qml  TerminalView.qml  ThemedSwitch.qml  YasDialog.qml  YasIcon.qml
qml/core/views/: ActionsView.qml  ExplorerView.qml  HistoryView.qml  HomeView.qml  InstalledView.qml  SettingsView.qml  UpdatesView.qml
scripts/: make-icns.sh
src/: main.cpp  snapadapter.cpp  snapadapter.h
src/core/: appcontroller.cpp  appcontroller.h  bootstrap.cpp  bootstrap.h  clicommand.h  clidetector.cpp  clidetector.h  commandlog.cpp  commandlog.h  operationqueue.cpp  operationqueue.h  package.h  packagelistmodel.cpp  packagelistmodel.h  packagemanageradapter.h  processrunner.cpp  processrunner.h  thememanager.cpp  thememanager.h
tests/: CMakeLists.txt  tst_packagelistmodel.cpp  tst_processrunner.cpp  tst_snapadapter.cpp
